--- a/src/main/resources/velocity/todoList.vm
+++ b/src/main/resources/velocity/todoList.vm
@@ -24,7 +24,11 @@
     <span id="todo-count">
         <strong>$activeCount</strong> items left
     </span>
-    
+    <ul id="filters" ic-push-url="true"> ##maintains history
+        <li #if($filter == "")        class="selected"#end ic-get-from="/">All</li>
+        <li #if($filter == "active")  class="selected"#end ic-get-from="/?status=active">Active</li>
+        <li #if($filter == "complete")class="selected"#end ic-get-from="/?status=complete">Completed</li>
+    </ul>
     #if($anyCompleteTodos)
         <button id="clear-completed" ic-delete-from="/todos/completed" ic-include='{"status":"$status"}'>Clear completed</button>
     #end
